   * Fix for italic in DCinemaSmpte2007/2010/2014 - thx Marko
   * Minor fix for "Remove text for HI" - thx igenaya
   * Minor fix for split with zero time codes - thx darnn
   * Try to fix Tools - Join... with different ASSA styles - thx Joe
   * Fix crash in "Continuation style" - thx ivandrofly
   * Fix export to "dvd studio stl" - thx nonofx


3.6.1 (20th May 2021)
* NEW:
   * Add "Subtitle formats" settings - thx OmrSi
   * ASSA attachments manager - thx LeonCheung
   * Add Categories in ASSA style manager - thx ChocOranger/OmrSi
   * Auto load ASSA styles for new files - thx z3us/OmrSi
   * Add support for attached fonts in ASSA style manager
   * Add "Apply" button in ASSA style manager - thx LeonCheung
   * Allow multiple selection in ASSA style manager - thx OmrSi
   * Add bookmarks to modify selection - thx moob158/OmrSi
   * Add shortcut for toggling video controls on/off
   * Add "Show/hide waveform" shortcut - thx AbsenceJam
   * Add "Move parts after cursor position to next subtitle" shortcut - thx Leon
   * Add a quick way to remove blank lines via shortcut
   * Add "Set start, offset all" shortcut - thx QuentinNetherwood/OmrSi
   * Add export to csv of bookmarks - thx kjaerlige
   * Add basic read support of .mcc files - thx Bern
   * Add toggle quotes and HI tags shortcuts
* IMPROVED:
   * Update Polish translation - thx admas
   * Update Bulgarian translation - thx Калин
   * Update Chinese translation - thx nkh0472
   * Update Spanish translations - thx paconaranjo
   * Update Romanian translation - thx Mircea
   * Update Basque translation - thx Azpidatziak
   * Update Korean translation - thx domddol
   * Update Portuguese translation - thx hugok79
   * Update Greek translation - thx PMitsakis
   * Update Turkish translation - thx ismail0100
   * Minor tweaks for font/appearance settings
   * Only set listview backcolor if visual styles enabled - thx ask2018/OmrSi
   * Optimize merge lines with same text/time